# haitaka-variants

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PRELAUNCH.md  README.md  ROADMAP.md  haitaka_learn.anhoku-pilot.toml  haitaka_learn.anhoku-smoke.toml  haitaka_learn.anhoku-v0.toml  haitaka_learn.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  performance_issue.yml  rules_bug.yml  training_run.yml  variant_request.yml
.github/workflows/: benchmarks.yml  rust.yml
docs/: anhoku-nnue-training.md  benchmarks.md  launch-issues.md  models.md  shogitter-package.md  supported-rules.md
haitaka/: Cargo.toml  README.md
haitaka/benches/: dfpn.rs
haitaka/examples/: dfpn.rs  dfpn_corpus.rs
haitaka/src/: annan.rs  dfpn.rs  lib.rs  variant_rules.rs
haitaka/src/board/: mod.rs  parse.rs  validate.rs  zobrist.rs
haitaka/src/board/movegen/: mod.rs  piece_moves.rs  tests.rs
haitaka_cli/: Cargo.toml  README.md
haitaka_cli/src/: main.rs
haitaka_learn/: Cargo.toml  README.md
haitaka_learn/src/: config.rs  dataset.rs  main.rs  trainer.rs  verify.rs
haitaka_types/: Cargo.toml  README.md
haitaka_types/src/: lib.rs  piece.rs  rank.rs
haitaka_wasm/: Cargo.toml  README.md
haitaka_wasm/benches/: nnue.rs
haitaka_wasm/src/: lib.rs  nnue.rs
plans/: shogitter-engine-package-v1-implementation-plan.md
scripts/: compare_criterion.py  prepare_anhoku_training_bundle.sh
xtask/src/: main.rs
