[package]
name = "haitaka_cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
haitaka = { path = "../haitaka", default-features = false }
haitaka_wasm = { path = "../haitaka_wasm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
annan = ["haitaka/annan", "haitaka_wasm/annan"]
