[package]
name = "haitaka_learn"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
haitaka = { path = "../haitaka", default-features = false }
haitaka_wasm = { path = "../haitaka_wasm" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.16"

[features]
annan = ["haitaka/annan", "haitaka_wasm/annan"]
anhoku = ["haitaka/anhoku", "haitaka_wasm/anhoku"]
antouzai = ["haitaka/antouzai", "haitaka_wasm/antouzai"]
