[package]
name = "haitaka_wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
haitaka = { path = "../haitaka", default-features = false }
wasm-bindgen = "0.2.100"
js-sys = "0.3.90"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "nnue"
harness = false

[features]
annan = ["haitaka/annan"]
anhoku = ["haitaka/anhoku"]
antouzai = ["haitaka/antouzai"]
